fix scroll shift

--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -51,6 +51,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   color: #fff;
+  overflow-y: scroll;
 }
 
 a,
